# mxchip_client

./: CMakeLists.txt
arduino/MXChipServer/: MXChipServer.ino
client/: CMakeLists.txt
client/example/: main.c
client/include/mxchip_client/: client.h
client/src/: client.c
gui/: CMakeLists.txt  main.cpp
gui/glad/: CMakeLists.txt
gui/glad/include/glad/: glad.h
gui/glad/src/: glad.c
